--- a/index.html
+++ b/index.html
@@ -1,80 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="styles.css" />
-    <script src="code.js" defer></script>
-  </head>
-  <body>
-    <div class="screen-wrapper">
-      <div class="otp-container">
-        <h3>Verify Your Account</h3>
-        <p>
-          We emailed you the six digit code to saimohanreddy98gmail.com
-          <br />
-          Enter the code below to confirm your email address.
-        </p>
-
-        <div class="inputs-container">
-          <input
-            id="zero"
-            data-number="0"
-            class="otp-input"
-            type="text"
-            placeholder="0"
-            maxlength="1"
-            autofocus
-          />
-          <input
-            id="one"
-            data-number="1"
-            class="otp-input"
-            type="text"
-            placeholder="0"
-            maxlength="1"
-          />
-          <input
-            id="two"
-            data-number="2"
-            class="otp-input"
-            type="text"
-            placeholder="0"
-            maxlength="1"
-          />
-          <input
-            id="three"
-            data-number="3"
-            class="otp-input"
-            type="text"
-            placeholder="0"
-            maxlength="1"
-          />
-          <input
-            id="four"
-            data-number="4"
-            class="otp-input"
-            type="text"
-            placeholder="0"
-            maxlength="1"
-          />
-          <input
-            id="five"
-            data-number="5"
-            class="otp-input"
-            type="text"
-            placeholder="0"
-            maxlength="1"
-          />
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Account Verification UI</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital@1&family=IBM+Plex+Serif:ital@1&family=Josefin+Sans:ital,wght@0,300;1,300&family=Playfair+Display:ital@1&family=Work+Sans:ital,wght@0,300;1,200;1,400&display=swap" rel="stylesheet">
+</head>
+<body>
+    <div class="container">
+        <h2>Verify Your Account</h2>
+        <p>We send you the six digit code to saimohanreddy98@gmail.com <br/> Enter the code below to confirm your email address.</p>
+        <div class="code-container">
+          <input type="number" class="code" placeholder="0" min="0" max="9" required>
+          <input type="number" class="code" placeholder="0" min="0" max="9" required>
+          <input type="number" class="code" placeholder="0" min="0" max="9" required>
+          <input type="number" class="code" placeholder="0" min="0" max="9" required>
+          <input type="number" class="code" placeholder="0" min="0" max="9" required>
+          <input type="number" class="code" placeholder="0" min="0" max="9" required>
         </div>
-
-        <div class="foot-note">
-          This is design only. We didn't actually sent you an email as we don't
-          have your email, right?
-        </div>
+        <small class="info">
+            This is design only. We didn't actually sent you an email as we don't
+            have your email, right?
+        </small>
       </div>
-    </div>
-  </body>
+    <script src="App.js"></script>
+</body>
 </html>
